# sqlite-rs-embedded

./: Cargo.toml  README.md
.github/workflows/: ci.yml
sqlite3_allocator/: Cargo.toml
sqlite3_capi/src/: capi.rs
sqlite_nostd/src/: lib.rs  nostd.rs
sqlite_web/: Cargo.toml
sqlite_web/src/: lib.rs  web.rs
stable_trap/: Cargo.toml
stable_trap/src/: lib.rs
